--- a/youtube-clone-backend/CmakeLists.txt
+++ b/youtube-clone-backend/CmakeLists.txt
@@ -5,7 +5,7 @@ project(output VERSION 1.0 LANGUAGES C CXX)
 
 set(SOURCE_FILES
     "server/server.cpp"
-    "HttpTypes/HttpTypes.cpp"
+    "HttpImplementation/httpImplementation.cpp"
     "httpHandler/httpHandler.cpp"
     "main.cpp"
 )   
