--- a/youtube-clone-backend/CmakeLists.txt
+++ b/youtube-clone-backend/CmakeLists.txt
@@ -6,6 +6,7 @@ project(output VERSION 1.0 LANGUAGES C CXX)
 set(SOURCE_FILES
     "server/server.cpp"
     "HttpImplementation/httpImplementation.cpp"
+    "httpHandler/JsonHandler/jsonHandler.cpp"
     "httpHandler/httpHandler.cpp"
     "main.cpp"
 )   
