--- a/youtube-clone-backend/CmakeLists.txt
+++ b/youtube-clone-backend/CmakeLists.txt
@@ -2,16 +2,42 @@ cmake_minimum_required(VERSION 2.8...3.13)
 
 project(output VERSION 1.0 LANGUAGES C CXX)
 
-
 set(SOURCE_FILES
     "server/server.cpp"
     "HttpImplementation/httpImplementation.cpp"
-    "EndPointHandler/JsonHandler/jsonHandler.cpp"
+    "JsonData/jsonData.cpp"
     "EndPointHandler/endPointHandler.cpp"
-    "EndPoints/RootEndPoint/rootEndPoint.cpp"
+    "EndPoints/Root/root.cpp"
+    "EndPoints/SignIn/signIn.cpp"
+    "EndPoints/SignUp/signUp.cpp"
     "EndPoints/NotFound/notFound.cpp"
+
     "main.cpp"
 )   
 add_executable(output ${SOURCE_FILES})
 
 set_property(TARGET output PROPERTY CXX_STANDARD 23)
+
+include(FetchContent)
+FetchContent_Declare(
+  googletest
+  URL https://github.com/google/googletest/archive/77f6bd3e75a2e7d3c67a024893417de42f58c418.zip
+)
+FetchContent_MakeAvailable(googletest)
+
+enable_testing()
+
+set(TEST_FILES
+    "Tests/jsonDataTests.cpp"
+)   
+add_executable(tests ${TEST_FILES})
+
+set_property(TARGET tests PROPERTY CXX_STANDARD 23)
+
+target_link_libraries(
+    tests
+    GTest::gtest_main
+)
+
+include(GoogleTest)
+gtest_discover_tests(tests)
